[gd_scene load_steps=8 format=3 uid="uid://la5dbicfv5x2"]

[ext_resource type="Script" path="res://Main.gd" id="1_t5d1a"]
[ext_resource type="PackedScene" uid="uid://bg3216s1or3fc" path="res://player.tscn" id="2_68n7x"]
[ext_resource type="PackedScene" uid="uid://ckli7cxwkmcxw" path="res://mob.tscn" id="2_hqsjo"]
[ext_resource type="PackedScene" uid="uid://bj0fi8as4jafm" path="res://HUD.tscn" id="4_usi0c"]
[ext_resource type="AudioStream" uid="uid://bm3fs7h4a4d0h" path="res://art/House In a Forest Loop.ogg" id="5_hcl6m"]
[ext_resource type="AudioStream" uid="uid://c7h2dfirdh4qm" path="res://art/gameover.wav" id="6_6j0uq"]

[sub_resource type="Curve2D" id="Curve2D_l06c0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_t5d1a")
mob_scene = ExtResource("2_hqsjo")

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_l06c0")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Mob" parent="MobPath" instance=ExtResource("2_hqsjo")]
position = Vector2(-80, 40)
scale = Vector2(0.7, 0.7)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
color = Color(0.342141, 0.500158, 0.482622, 1)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 440)

[node name="Player" parent="." instance=ExtResource("2_68n7x")]
position = Vector2(240, 320)

[node name="HUD" parent="." instance=ExtResource("4_usi0c")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hcl6m")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_6j0uq")

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
